Initial work to remove Gantt specific code

--- a/WorkloadExt/WorkloadExt.rc
+++ b/WorkloadExt/WorkloadExt.rc
@@ -67,10 +67,10 @@ END
 // Dialog
 //
 
-IDD_WORKLOADTREE_DIALOG DIALOGEX 0, 0, 594, 316
+IDD_WORKLOAD_DIALOG DIALOGEX 0, 0, 594, 316
 STYLE WS_CHILD
 EXSTYLE WS_EX_APPWINDOW
-FONT 8, "Tahoma", 0, 0, 0x1
+FONT 8, "Tahoma"
 BEGIN
     CTEXT           "01/01/2001 10:12 AM - 01/01/2001 11:12 PM",
                     IDC_SELECTEDTASKDATES,351,13,236,12,SS_CENTERIMAGE | 
@@ -79,14 +79,6 @@ BEGIN
     COMBOBOX        IDC_DISPLAY,0,13,152,118,CBS_DROPDOWNLIST | 
                     CBS_OWNERDRAWFIXED | CBS_HASSTRINGS | WS_VSCROLL | 
                     WS_TABSTOP
-    CONTROL         "Custom2",IDC_TREEHEADER,"SysHeader32",0x0,0,33,160,13
-    CONTROL         "Tree1",IDC_WORKLOADTREE,"SysTreeView32",TVS_HASBUTTONS | 
-                    TVS_HASLINES | TVS_LINESATROOT | TVS_EDITLABELS | 
-                    TVS_DISABLEDRAGDROP | TVS_SHOWSELALWAYS | TVS_NOTOOLTIPS | 
-                    TVS_NONEVENHEIGHT | WS_HSCROLL | WS_TABSTOP,0,46,159,263
-    CONTROL         "List1",IDC_WORKLOADLIST,"SysListView32",LVS_REPORT | 
-                    LVS_SINGLESEL | LVS_SHOWSELALWAYS | LVS_NOSORTHEADER | 
-                    WS_TABSTOP,162,33,425,276
     COMBOBOX        IDC_SNAPMODES,159,13,79,161,CBS_DROPDOWNLIST | 
                     WS_VSCROLL | WS_TABSTOP
     LTEXT           "&Snap Mode",IDC_SNAPMODES_LABEL,159,2,79,8
@@ -94,6 +86,8 @@ BEGIN
                     352,3,235,8
     CONTROL         "",IDC_TB_PLACEHOLDER,"Static",SS_BLACKFRAME | NOT 
                     WS_VISIBLE,243,12,106,17
+    CONTROL         "",IDC_WORKLOAD_FRAME,"Static",SS_BLACKFRAME | NOT 
+                    WS_VISIBLE,0,30,587,279
 END
 
 
@@ -105,7 +99,7 @@ END
 #ifdef APSTUDIO_INVOKED
 GUIDELINES DESIGNINFO MOVEABLE PURE 
 BEGIN
-    IDD_WORKLOADTREE_DIALOG, DIALOG
+    IDD_WORKLOAD_DIALOG, DIALOG
     BEGIN
         RIGHTMARGIN, 587
         BOTTOMMARGIN, 309
