--- a/WorkloadExt/WorkloadExt.vcxproj.filters
+++ b/WorkloadExt/WorkloadExt.vcxproj.filters
@@ -36,6 +36,12 @@
     <ClCompile Include="WorkloadCtrl.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="EditAllocationsDlg.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="EditAllocationsListCtrl.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="WorkloadExt.rc">
@@ -74,6 +80,12 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="WorkloadCtrl.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="EditAllocationsDlg.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="EditAllocationsListCtrl.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
