Preliminary work on 'Totals'

--- a/WorkloadExt/WorkloadExt.rc
+++ b/WorkloadExt/WorkloadExt.rc
@@ -81,6 +81,12 @@ BEGIN
                     WS_VISIBLE,0,12,106,17
     CONTROL         "",IDC_WORKLOAD_FRAME,"Static",SS_BLACKFRAME | NOT 
                     WS_VISIBLE,0,30,587,226
+    CONTROL         "List1",IDC_TREETOTALS,"SysListView32",LVS_REPORT | 
+                    LVS_SINGLESEL | LVS_NOSCROLL | LVS_NOCOLUMNHEADER | 
+                    LVS_NOSORTHEADER | WS_BORDER | WS_TABSTOP,0,275,152,34
+    CONTROL         "List1",IDC_COLUMNSTOTALS,"SysListView32",LVS_REPORT | 
+                    LVS_SINGLESEL | LVS_NOSCROLL | LVS_NOCOLUMNHEADER | 
+                    LVS_NOSORTHEADER | WS_BORDER | WS_TABSTOP,158,275,294,34
 END
 
 
