--- a/WorkloadExt/WorkloadExt.rc
+++ b/WorkloadExt/WorkloadExt.rc
@@ -321,7 +321,7 @@ END
 
 STRINGTABLE DISCARDABLE 
 BEGIN
-    IDS_TOTALDAYSPERPERSON  "Total Allocated Time (days)"
+    IDS_TOTALDAYSPERPERSON  "Total Allocated Days"
     IDS_NUMACTIVITIESPERPERSON "Number of Allocated Tasks"
     IDS_PERCENTLOADPERPERSON "Percentage Load"
 END
