--- a/WorkloadExt/WorkloadExt.vcxproj.filters
+++ b/WorkloadExt/WorkloadExt.vcxproj.filters
@@ -42,6 +42,9 @@
     <ClCompile Include="EditAllocationsListCtrl.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="WorkloadChart.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="WorkloadExt.rc">
@@ -86,6 +89,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="EditAllocationsListCtrl.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="WorkloadChart.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
