--- a/WorkloadExt/WorkloadExt.rc
+++ b/WorkloadExt/WorkloadExt.rc
@@ -318,6 +318,7 @@ BEGIN
     IDS_ATTRIB_TASKID       "Task ID"
     IDS_NEW_ALLOCATION      "<new allocation>"
     IDS_COL_TOTAL           "Total"
+    IDS_TOTALSDATERANGE     "Period %s - %s"
 END
 
 STRINGTABLE DISCARDABLE 
