Change order of buttons and fixup toolbar image

--- a/WorkloadExt/WorkloadExt.rc
+++ b/WorkloadExt/WorkloadExt.rc
@@ -267,15 +267,15 @@ END
 
 IDR_TOOLBAR TOOLBAR MOVEABLE PURE  16, 15
 BEGIN
-    BUTTON      ID_MOVEPERIODSTARTBACKONEMONTH
+    BUTTON      ID_WORKLOAD_EDITALLOCATIONS
+    SEPARATOR
     BUTTON      ID_MOVEPERIODBACKONEMONTH
+    BUTTON      ID_MOVEPERIODSTARTBACKONEMONTH
     BUTTON      ID_THISMONTHPERIOD
-    BUTTON      ID_MOVEPERIODFOREWARDSONEMONTH
     BUTTON      ID_MOVEPERIODENDFOREWARDSONEMONTH
+    BUTTON      ID_MOVEPERIODFOREWARDSONEMONTH
     SEPARATOR
     BUTTON      ID_WORKLOAD_PREFS
-    SEPARATOR
-    BUTTON      ID_WORKLOAD_EDITALLOCATIONS
     SEPARATOR
     BUTTON      ID_HELP
 END
@@ -342,9 +342,8 @@ BEGIN
     ID_THISMONTHPERIOD      "\nSet period to 'this' month"
     ID_MOVEPERIODSTARTBACKONEMONTH "\nMove start of period back one month"
     ID_MOVEPERIODBACKONEMONTH "\nMove whole of period back one month"
-    ID_MOVEPERIODFOREWARDSONEMONTH "\nMove whole of period foreward one month"
-    ID_MOVEPERIODENDFOREWARDSONEMONTH 
-                            "\nMove end of period foreward one month"
+    ID_MOVEPERIODFOREWARDSONEMONTH "\nMove whole of period forward one month"
+    ID_MOVEPERIODENDFOREWARDSONEMONTH "\nMove end of period forward one month"
 END
 
 #endif    // English (Australia) resources
