--- a/WorkloadExt/WorkloadExt.rc
+++ b/WorkloadExt/WorkloadExt.rc
@@ -272,8 +272,8 @@ BEGIN
     BUTTON      ID_MOVEPERIODBACKONEMONTH
     BUTTON      ID_MOVEPERIODSTARTBACKONEMONTH
     BUTTON      ID_THISMONTHPERIOD
-    BUTTON      ID_MOVEPERIODENDFOREWARDSONEMONTH
-    BUTTON      ID_MOVEPERIODFOREWARDSONEMONTH
+    BUTTON      ID_MOVEPERIODENDFORWARDSONEMONTH
+    BUTTON      ID_MOVEPERIODFORWARDSONEMONTH
     SEPARATOR
     BUTTON      ID_WORKLOAD_PREFS
     SEPARATOR
@@ -344,6 +344,8 @@ BEGIN
     ID_MOVEPERIODBACKONEMONTH "\nMove whole of period back one month"
     ID_MOVEPERIODFOREWARDSONEMONTH "\nMove whole of period forward one month"
     ID_MOVEPERIODENDFOREWARDSONEMONTH "\nMove end of period forward one month"
+    ID_MOVEPERIODENDFORWARDSONEMONTH "\nMove end of period forward one month"
+    ID_MOVEPERIODFORWARDSONEMONTH "\nMove whole of period forward one month"
 END
 
 #endif    // English (Australia) resources
