--- a/3rdParty/3rdParty.vcxproj.filters
+++ b/3rdParty/3rdParty.vcxproj.filters
@@ -118,6 +118,9 @@
     <ClCompile Include="ColorDef.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="GdiPlus.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Base64Coder.h">
@@ -280,6 +283,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="T64Utils.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="GdiPlus.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
