Fix hang switching focus

--- a/BurndownExt/BurndownExt.rc
+++ b/BurndownExt/BurndownExt.rc
@@ -128,8 +128,9 @@ END
 // Dialog
 //
 
-IDD_STATISTICS_DLG DIALOG DISCARDABLE  0, 0, 477, 281
+IDD_STATISTICS_DLG DIALOGEX 0, 0, 477, 281
 STYLE WS_CHILD
+EXSTYLE WS_EX_CONTROLPARENT
 FONT 8, "Tahoma"
 BEGIN
     LTEXT           "Dis&play",IDC_STATIC,0,2,159,8
