--- a/CalendarExt/CalendarExt.rc
+++ b/CalendarExt/CalendarExt.rc
@@ -125,8 +125,9 @@ IDI_HELP_BUTTON         ICON    DISCARDABLE     "res\\help_button.ico"
 // Dialog
 //
 
-IDD_CALENDAR_DIALOG DIALOG DISCARDABLE  0, 0, 536, 271
+IDD_CALENDAR_DIALOG DIALOGEX 0, 0, 536, 271
 STYLE WS_CHILD
+EXSTYLE WS_EX_CONTROLPARENT
 FONT 8, "Tahoma"
 BEGIN
     CTEXT           "01/01/2001 10:12 AM - 01/01/2001 11:12 PM",
