--- a/WorkloadExt/WorkloadExt.rc
+++ b/WorkloadExt/WorkloadExt.rc
@@ -69,8 +69,8 @@ END
 
 IDD_WORKLOAD_DIALOG DIALOGEX 0, 0, 594, 316
 STYLE WS_CHILD
-EXSTYLE WS_EX_APPWINDOW
-FONT 8, "Tahoma", 0, 0, 0x1
+EXSTYLE WS_EX_CONTROLPARENT | WS_EX_APPWINDOW
+FONT 8, "Tahoma"
 BEGIN
     LTEXT           "Current Period: ",IDC_PERIODDURATION,0,2,300,8
     CONTROL         "",IDC_TB_PLACEHOLDER,"Static",SS_BLACKFRAME | NOT 
