Add ColorBrewer helper class

--- a/3rdParty/3rdParty.vcxproj
+++ b/3rdParty/3rdParty.vcxproj
@@ -123,6 +123,7 @@
       <PreprocessorDefinitions Condition="'$(Configuration)|$(Platform)'=='Unicode Debug|Win32'">%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <PreprocessorDefinitions Condition="'$(Configuration)|$(Platform)'=='Unicode Release|Win32'">%(PreprocessorDefinitions)</PreprocessorDefinitions>
     </ClCompile>
+    <ClCompile Include="ColorBrewer.cpp" />
     <ClCompile Include="ColorDef.cpp" />
     <ClCompile Include="ColourPicker.cpp">
       <PreprocessorDefinitions Condition="'$(Configuration)|$(Platform)'=='Unicode Debug|Win32'">%(PreprocessorDefinitions)</PreprocessorDefinitions>
@@ -261,6 +262,8 @@
     <ClInclude Include="Base64Coder.h" />
     <ClInclude Include="CalendarCtrl.h" />
     <ClInclude Include="ClipboardBackup.h" />
+    <ClInclude Include="ColorBrewer.h" />
+    <ClInclude Include="ColorBrewerPalettes.h" />
     <ClInclude Include="ColorDef.h" />
     <ClInclude Include="ColourPicker.h" />
     <ClInclude Include="ColourPopup.h" />
