--- a/3rdParty/3rdParty.vcxproj.filters
+++ b/3rdParty/3rdParty.vcxproj.filters
@@ -121,6 +121,9 @@
     <ClCompile Include="GdiPlus.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="ColorBrewer.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Base64Coder.h">
@@ -286,6 +289,12 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="GdiPlus.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="ColorBrewer.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="ColorBrewerPalettes.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
